--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  background-image: linear-gradient(to bottom, #b22234, #ffffff, #3c3b6e);
+  background-repeat: none;
+  background-size: cover;
+}
+
 h1 {
   text-align: justify;
   justify-content: center;
@@ -7,13 +13,20 @@ h1 {
 }
 .pic2 {
   position: relative;
-  left: 300px;
-  bottom: 60px;
-  height: 60vh;
+  height: auto;
+  width: 50%;
+
 }
-.video{
-    height: 30vh;
-    position: relative;
-    top: 30px;
-    left:350px;
+.video {
+  height: 30vh;
+  position: relative;
+}
+.pic-cont {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.pic1{
+  height: auto;
+  width: 50%;
 }
