--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-body {
+.site {
   background-image: linear-gradient(to bottom, #b22234, #ffffff, #3c3b6e);
   background-repeat: none;
   background-size: cover;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  padding: 0%;
 }
-
-h1 {
+.site{
+  width: 100%;
+  height: 100%;
+}
+.head_txt {
   text-align: justify;
   justify-content: center;
   display: flex;
@@ -30,3 +37,5 @@ h1 {
   height: auto;
   width: 50%;
 }
+
+
